--- a/lowres.css
+++ b/lowres.css
@@ -2,6 +2,10 @@
 
 @media all and (min-width: 768px) and (max-width: 991px) {
 
+    .txt {
+        grid-area: 2/2/4/7;
+    }
+
     #dataStations {
         grid-area: 1/4/5/7;
     }
