--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ form {
 }
 
 #btnLeft, #btnRight {
-    background-color: grey;
+    background-color: black;
     opacity: 0.9;
     cursor: pointer;
     padding: 10px;
@@ -130,7 +130,7 @@ form {
 }
 
     #btnLeft:hover, #btnRight:hover {
-        color: grey;
+        color: black;
         background-color: #94C01F;
     }
 
@@ -163,8 +163,8 @@ form {
     padding: 10px;
     align-self: center;
     font-size: 17px;
-    border: 3px solid grey;
-    background-color: grey;
+    border: 3px solid black;
+    background-color: black;
     color: #94C01F;
     cursor: pointer;
     transition: 0.6s ease;
@@ -179,7 +179,7 @@ form {
 }
 
     #play:hover, #pause:hover {
-        color: grey;
+        color: black;
         background-color: #94C01F;
         border: 3px solid #94C01F;
     }
@@ -189,7 +189,7 @@ form {
     margin: 10px;
     width: 12.5px;
     height: 12.5px;
-    background-color: grey;
+    background-color: black;
     border-radius: 50%;
 }
 
@@ -271,12 +271,13 @@ form {
 
 .btnClearCanvas {
     margin-top: 8px;
-    margin-bottom: 12px;
+    margin-bottom: 30px;
     border: 3px solid black;
     border-radius: 50%;
-    padding: 3.5px;
+    padding-top: 3px;
     padding-left: 4px;
     padding-right: 4px;
+    padding-bottom: 2px;
     font-size: 20px;
     cursor: pointer;
     transition: 0.6s ease;
